# glissando-stems

./: .env  .gitattributes  .gitmodules  README.md  docker-compose-dev.yml  docker-compose-prod.yml  mysql-init.sql
.github/workflows/: build-and-deploy.yaml
backend/: .env  .gitignore  Dockerfile  Dockerfile.dev  package-lock.json  package.json  typeorm-dev-datasource.ts  typeorm-prod-datasource.cjs  typeorm-prod-datasource.ts
backend/migrations/: 1694903064465-migration.ts
backend/scripts/: process-file.sh
backend/src/: app.module.ts  config.ts  main.ts  session.ts  virtual-column-polyfill.ts  virtual-column.ts
backend/src/common/: common.module.ts  roles.guard.ts
backend/src/database/: database.module.ts
backend/src/song/: song.controller.ts  song.exceptions.ts  song.module.ts  song.service.ts  stem.service.ts
backend/src/song/dto/: form-entity.dto.ts  song-create.dto.ts  song-request.dto.ts  song-response.dto.ts  stem-failed-response.dto.ts  stem-processing-response.dto.ts  stem-ready-response.dto.ts  stem-request.dto.ts  stem-response.dto.ts  varying-tempo-entity.dto.ts
backend/src/song/entities/: song.entity.ts  stem.entity.ts
backend/src/storage-s3/: storage-s3.module-definition.ts  storage-s3.module.ts  storage-s3.service.ts
backend/src/user/: user.controller.ts  user.exceptions.ts  user.module.ts  user.service.ts
backend/src/user/dto/: change-password-request.dto.ts  login-params.dto.ts  login-request.dto.ts  login-response.dto.ts  me-band-response.dto.ts  me-response.dto.ts
backend/src/user/entities/: band.entity.ts  user.entity.ts
frontend/: Dockerfile.dev  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/native/: CMakeLists.txt  CMakePresets.json  Dockerfile.dev  README.md
frontend/native/include/: audio-buffer.h  audio-worklet.h  filter-fir.h  limiter.h  metronome.h  mixer.h  peak-meter.h  spin-lock.h  stem-manager.h  tempo.h  utils.h  waveform-renderer.h
frontend/native/lib/: CMakeLists.txt  cgif.cmake  cpp-base64.cmake  lodepng.cmake
frontend/native/src/: audio-buffer.cpp  audio-worklet.cpp  bind.cpp  limiter.cpp  main.cpp  metronome-data.cpp  metronome.cpp  mixer.cpp  peak-meter.cpp  stb_vorbis.cpp  stem-manager.cpp  tempo.cpp  utils.cpp  waveform-renderer.cpp
frontend/public/stems/: .gitignore  demo-stem-142bpm.oga
frontend/src/: App.tsx  env.d.ts  index.css
frontend/src/@types/: global.d.ts
frontend/src/components/: Avatar.tsx  AvatarPopup.tsx  AxiosContext.tsx  Button.tsx  ChangePasswordModal.tsx  EditorNavbar.tsx  EditorTimer.tsx  EditorTracks.tsx  Input.tsx  InstrumentTile.tsx  LinkButton.tsx  LoadingBar.tsx  Modal.tsx  MuteSolo.tsx  Navbar.tsx  NavbarButton.tsx  Page.tsx  PeakMeter.tsx  PlaybackIndicator.tsx  ProgressBar.tsx  Select.tsx  SessionContext.tsx  Slider.tsx  SliderBox.tsx  SolidBackgroundFrame.tsx  SongAddEditModal.tsx  SongForm.tsx  StemAddEditModal.tsx  StemMenu.tsx  Tabs.tsx  Timeline.tsx  UploadZone.tsx  WasmContext.tsx  withSeeking.tsx
frontend/src/data/: instruments.ts
frontend/src/hooks/: useAxios.ts  useNative.ts  usePlaybackUpdate.ts  useQueryData.ts  useSession.ts
frontend/src/routes/: Editor.tsx  Login.tsx  Main.tsx  NotFound.tsx  SongList.tsx
nginx-proxy/: .gitignore  Dockerfile  mime.types  nginx.conf
